--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home" android:icon="@drawable/home_04"/>
-    <item android:title="Card" android:icon="@drawable/shopping_cart_01"/>
-    <item android:title="Search" android:icon="@drawable/searchicon"/>
-    <item android:title="History" android:icon="@drawable/historyicon"/>
-    <item android:title="Profile" android:icon="@drawable/user_02"/>
+    <item android:title="Home"
+        android:id="@+id/homeFragment"
+        android:icon="@drawable/home_04"/>
+
+    <item android:title="Card"
+        android:id="@+id/cardFragment"
+        android:icon="@drawable/shopping_cart_01"/>
+
+    <item android:title="Search"
+        android:id="@+id/searchFragment"
+        android:icon="@drawable/searchicon"/>
+
+    <item android:title="History"
+        android:id="@+id/historyFragment"
+        android:icon="@drawable/historyicon"/>
+
+    <item android:title="Profile"
+        android:id="@+id/profileFragment"
+        android:icon="@drawable/user_02"/>
 </menu>
